2003.02.18
  - show the version number in the engine and editor windows as well
    as the start menu
  - integrated SDHawk's startup game

2003.02.17
  - you can no longer add zones that have a width and height of zero

2003.02.11
  - added help menu to take you to the sphere.sf.net FAQ
  - removed the reference to MIDI files from the editor...  you can no
    longer add them to your projects, because they are unsupported

2003.02.09
  - removed "Alternate DirectBlit method" from sphere_gl's
    configuration, since it is never used.

2003.02.07
  - fixed a stack overflow bug when using the fill tool on large images
  - removed the options dialog box from the editor
  - fix trigger activation so you can activate a trigger more than
    once on a map
  - make rawfile.read return a ByteArray object
  - redraw the map after ResizeAllLayers
  - when resizing or rescaling the tileset, move entities, the
    start point, and zones appropriately as well
  - changed the Paste Area tool's tooltip to "Paste Area" instead of
    "Paste"
  - clarified documentation for ExitMapEngine()
  - added a 1000 millisecond delay before error messages go away
  - when zone scripts fail, the map engine stops (just like triggers
    and person scripts)
  - calling Exit() in a bound script or person script or trigger
    (etc.) no longer gives an error
  - added Eric Duvic's circles.js system script
  - made Clock.getTime() return an array if you pass true to it.
    (August Bigelow)

2003.02.05
  - fixed GrabImage crash bug in standard16 and interpolate16
  - fixed: GrabImage in sphere_gl grabbed the wrong pixels (and
    inverted them too)

2003.02.04
  - fixed bug where phantom buttons would appear in tool palettes while
    resizing them
  - fixed bug where drawing gradient window styles in sphere_gl would
    leave a gap along the edge of the center
  - fixed bug where drawing a gradient rectangle before drawing any
    images would cause the gradient to not show up